--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/SplashScreen.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -26,5 +26,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+    
   }
 }
