--- a/package.json
+++ b/package.json
@@ -9,13 +9,53 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^18.6.2",
+    "@react-native-firebase/auth": "^18.6.2",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.18",
+    "@types/react": "~18.2.14",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "expo": "^49.0.16",
+    "expo-camera": "~13.4.4",
+    "expo-checkbox": "~2.4.0",
+    "expo-location": "~16.1.0",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
+    "firebase": "^10.7.0",
+    "location": "^0.0.1",
+    "mysql2": "^3.6.2",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.6",
+    "react-native-animatable": "^1.3.3",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-mail": "^6.1.1",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-send-intent": "^1.3.0",
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.1"
   },
   "private": true
 }
